# src/endpoints/courses.py
@@ -159,3 +159,24 @@ def get_paginated_courses():
     result = service_courses.get_paginated_courses(offset, max_per_page)
 
     return result["response"], result["code_status"]
+
+
+""" this endpoint is for getting the courses created by an user """
+
+
+@courses_bp.get("/courses_owned/<string:user_id>")
+def get_courses_owned_by_user(user_id=None):
+    """
+    Get all courses owned by a user.
+    """
+    if not user_id:
+        error = error_generator(
+            MISSING_FIELDS, "User ID is required", 400, "get_courses_owned_by_user"
+        )
+        return error["response"], error["code_status"]
+
+    logger.debug(f"[APP] Getting all courses owned by user with ID: {user_id}")
+    # Call the service to get all courses
+    result = service_courses.get_courses_owned_by_user(user_id)
+
+    return result["response"], result["code_status"]
