# swagger.yaml
@@ -120,6 +120,19 @@ paths:
         '200':
           description: Student enrolled
 
+  /courses_owned/{owner_id}:
+    get:
+      summary: Get courses owned by a user
+      parameters:
+        - name: owner_id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: List of owned courses
+          
   /courses/enrolled_courses/{student_id}:
     get:
       summary: Get courses a student is enrolled in
